@@ -1,7 +1,6 @@
 plugins {
     id("org.springframework.boot")
     id("io.spring.dependency-management")
-    jacoco
 }
 
 dependencies {
@@ -25,64 +24,18 @@ dependencies {
     }
 
     // S3
-    implementation("io.github.miensoap:aws-s3:1.0.3")
     implementation(platform("software.amazon.awssdk:bom:2.25.1"))
     implementation("software.amazon.awssdk:s3")
+    implementation("io.github.miensoap:aws-s3:1.0.3")
 
     // JWT
     implementation("io.jsonwebtoken:jjwt-api:0.13.0")
     implementation("io.jsonwebtoken:jjwt-impl:0.13.0")
     implementation("io.jsonwebtoken:jjwt-jackson:0.13.0")
 
-    // Test
+    // Local runtime
     runtimeOnly("com.h2database:h2")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-    testImplementation("org.springframework.security:spring-security-test")
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation(platform("org.testcontainers:testcontainers-bom:1.19.7"))
-    testImplementation("org.testcontainers:junit-jupiter")
-    testImplementation("org.testcontainers:mysql")
 
     // swagger
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0")
-}
-
-tasks.named<Test>("test") {
-    jvmArgs("-XX:+EnableDynamicAgentLoading")
-    useJUnitPlatform()
-}
-
-tasks.jacocoTestReport {
-    dependsOn(tasks.test)
-
-    doFirst {
-        val reportPath = reports.html.outputLocation.get().asFile
-        println("\n[Will be generated] JaCoCo Report: file://${reportPath}/index.html\n")
-    }
-
-    reports {
-        xml.required.set(true)
-        csv.required.set(false)
-        html.required.set(true)
-    }
-
-    classDirectories.setFrom(
-        files(classDirectories.files.map {
-            fileTree(it) {
-                exclude(
-                    "**/mock/*",
-                    "**/dto/**",
-                    "**/aop/**",
-                    "**/config/**",
-                    "**/lib/*",
-                    "**/event/**",
-                    "**/exception/**",
-                    "**/*Application*",
-                    "**/*InitData*"
-                )
-            }
-        })
-    )
-
-    finalizedBy(tasks.jacocoTestCoverageVerification)
 }
